modules/cli/src/test/resources/bad/syntax/disamb/modules/Modules03.scr
module bad.syntax.disamb.modules.Modules03;


type <java> "java.lang.String" from "rt.jar" as String;
sig <java> "java.lang.String" from "rt.jar" as String;
